--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,1 +1,6 @@
-version = 2.7.5
+version = 3.7.17
+project.git = true
+runner.dialect = scala3
+rewrite.scala3.convertToNewSyntax = true
+rewrite.rules = [RedundantBraces]
+rewrite.scala3.removeOptionalBraces = yes
